// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select isOpen 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <input
      autoFocus={false}
      className=""
      label={undefined}
      onChange={[Function]}
      onClick={[Function]}
      placeholder={undefined}
      readOnly={true}
      value=""
    />
  </div>
  <div
    className=""
    style={null}
  >
    <div
      className={undefined}
      data-bubble-container={true}
    >
      <ul
        className={undefined}
      >
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Frankreich
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Spanien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Kroatien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Vereinigten Staaten
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Österreich
        </li>
      </ul>
    </div>
    <span
      className={undefined}
      data-bubble-arrow={true}
    />
  </div>
</div>
`;

exports[`Select isOpeningUpward 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <input
      autoFocus={false}
      className=""
      label={undefined}
      onChange={[Function]}
      onClick={[Function]}
      placeholder={undefined}
      readOnly={true}
      value=""
    />
  </div>
  <div
    className=""
    style={null}
  >
    <div
      className={undefined}
      data-bubble-container={true}
    >
      <ul
        className={undefined}
      >
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Österreich
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Vereinigten Staaten
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Kroatien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Spanien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Frankreich
        </li>
      </ul>
    </div>
    <span
      className={undefined}
      data-bubble-arrow={true}
    />
  </div>
</div>
`;

exports[`Select renders correctly 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <input
      autoFocus={false}
      className=""
      label={undefined}
      onChange={[Function]}
      onClick={[Function]}
      placeholder={undefined}
      readOnly={true}
      value=""
    />
  </div>
  <div
    className=""
    style={null}
  >
    <div
      className={undefined}
      data-bubble-container={true}
    >
      <ul
        className={undefined}
      >
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Frankreich
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Spanien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Kroatien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Vereinigten Staaten
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Österreich
        </li>
      </ul>
    </div>
    <span
      className={undefined}
      data-bubble-arrow={true}
    />
  </div>
</div>
`;

exports[`Select renders via optionRenderer 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <input
      autoFocus={false}
      className=""
      label={undefined}
      onChange={[Function]}
      onClick={[Function]}
      placeholder={undefined}
      readOnly={true}
      value=""
    />
  </div>
  <div
    className=""
    style={null}
  >
    <div
      className={undefined}
      data-bubble-container={true}
    >
      <ul
        className={undefined}
      >
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div>
            <span>
              German: 
              Frankreich
            </span>
            <span>
              English: 
              France
            </span>
          </div>
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div>
            <span>
              German: 
              Spanien
            </span>
            <span>
              English: 
              Spain
            </span>
          </div>
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div>
            <span>
              German: 
              Kroatien
            </span>
            <span>
              English: 
              Croatia
            </span>
          </div>
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div>
            <span>
              German: 
              Vereinigten Staaten
            </span>
            <span>
              English: 
              United States
            </span>
          </div>
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div>
            <span>
              German: 
              Österreich
            </span>
            <span>
              English: 
              Austria
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      className={undefined}
      data-bubble-arrow={true}
    />
  </div>
</div>
`;

exports[`Select renders with an error 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <input
      autoFocus={false}
      className=""
      label={undefined}
      onChange={[Function]}
      onClick={[Function]}
      placeholder={undefined}
      readOnly={true}
      value=""
    />
  </div>
  <div
    className=""
    style={null}
  >
    <div
      className={undefined}
      data-bubble-container={true}
    >
      <ul
        className={undefined}
      >
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Frankreich
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Spanien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Kroatien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Vereinigten Staaten
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Österreich
        </li>
      </ul>
    </div>
    <span
      className={undefined}
      data-bubble-arrow={true}
    />
  </div>
</div>
`;

exports[`Select renders with disabled options 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <input
      autoFocus={false}
      className=""
      label={undefined}
      onChange={[Function]}
      onClick={[Function]}
      placeholder={undefined}
      readOnly={true}
      value=""
    />
  </div>
  <div
    className=""
    style={null}
  >
    <div
      className={undefined}
      data-bubble-container={true}
    >
      <ul
        className={undefined}
      >
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          England
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Spain
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Thailand
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          USA
        </li>
      </ul>
    </div>
    <span
      className={undefined}
      data-bubble-arrow={true}
    />
  </div>
</div>
`;

exports[`Select renders with placeholder 1`] = `
<div
  className=""
>
  <div
    className={undefined}
  >
    <input
      autoFocus={false}
      className=""
      label={undefined}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="Select your country …"
      readOnly={true}
      value=""
    />
  </div>
  <div
    className=""
    style={null}
  >
    <div
      className={undefined}
      data-bubble-container={true}
    >
      <ul
        className={undefined}
      >
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Frankreich
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Spanien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Kroatien
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Vereinigten Staaten
        </li>
        <li
          className=""
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Österreich
        </li>
      </ul>
    </div>
    <span
      className={undefined}
      data-bubble-arrow={true}
    />
  </div>
</div>
`;
